--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <div class="container" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="0">
         <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"> ¡No dejes pasar esta oportunidad y únete a nuestra red! </h2>
         <div class="btn seguir me-2" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">
-          <a href="Login.html"><button>Inicia Sesión</button></a>
+          <a href="Views/seleccionarRegistro.html"><button>¡Registrarme!</button></a>
         </div>
       </div>
 
