--- a/index.html
+++ b/index.html
@@ -188,23 +188,12 @@
     </main>
 
     <footer>
-      <div class="container">
+      <div class="container" style="text-align: center; padding-bottom: 5%;">
         <div class="row">
-            <div class="col-md-6">
-                <p>&copy; 2024 ResulFast. Todos los derechos reservados.</p>
-                <ul class="footer-links">
-                    <li><a href="#">Política de Privacidad</a></li>
-                    <li><a href="#">Términos y Condiciones</a></li>
-                </ul>
+            <div class="col-md-12">
+                <p>&copy; 2024 Elemental Lab. Todos los derechos reservados.</p>
             </div>
-            <div class="col-md-6 text-end">
-                <ul class="social-icons">
-                    <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-                    <li><a href="#"><i class="bi bi-twitter"></i></a></li>
-                    <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-                    <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
-                </ul>
-            </div>
+            
         </div>
       </div>
     </footer>
