--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
                     <div class="card-body">
                       <h5 class="card-title"data-aos="fade-up" data-aos-duration="1000" data-aos-delay="650"> Descarga de Documentos </h5>
-                      <p class="card-text"data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">Opción para descargar resultados en formatos como PDF o Excel.</p>
+                      <p class="card-text"data-aos="fade-up" data-aos-duration="1000" data-aos-delay="700">Opción para descargar resultados en formatos Excel.</p>
                     </div>
                   </div>
                 </article>
